--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -20,7 +20,7 @@
             <form class="input-group" style="padding-top: 10px;">
                 <input type="text" class="form-control" placeholder="Search for..." id="query" autofocus>
                 <span class="input-group-btn">
-                    <input type="submit" class="btn btn-default form-control" id="search" value="Search" disabled>
+                    <input type="submit" class="btn btn-default form-control" id="search" value="Search">
                 </span>
             </form>
 
