Only use foreground api.js/util.js

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -36,14 +36,14 @@
 
         <script src="/mixed/js/extension.js"></script>
 
-        <script src="/bg/js/api.js"></script>
         <script src="/bg/js/audio.js"></script>
         <script src="/bg/js/dictionary.js"></script>
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/templates.js"></script>
-        <script src="/bg/js/util.js"></script>
+        <script src="/fg/js/api.js"></script>
         <script src="/fg/js/document.js"></script>
         <script src="/fg/js/source.js"></script>
+        <script src="/fg/js/util.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/japanese.js"></script>
         <script src="/mixed/js/scroll.js"></script>
