--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -141,10 +141,6 @@
                 </div>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="auto-play-audio"> Play audio automatically</label>
-                </div>
-
-                <div class="checkbox">
                     <label><input type="checkbox" id="show-advanced-options"> Show advanced options</label>
                 </div>
 
@@ -162,26 +158,11 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="audio-playback-source">Audio playback source</label>
-                    <select class="form-control" id="audio-playback-source">
-                        <option value="disabled">Disabled</option>
-                        <option value="jpod101">JapanesePod101</option>
-                        <option value="jpod101-alternate">JapanesePod101 (alternate)</option>
-                        <option value="jisho">Jisho.org</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
                     <label for="popup-display-mode">Popup display mode</label>
                     <select class="form-control" id="popup-display-mode">
                         <option value="default">Default</option>
                         <option value="full-width">Full width</option>
                     </select>
-                </div>
-
-                <div class="form-group options-advanced">
-                    <label for="audio-playback-volume">Audio playback volume <span class="label-light">(percent)</span></label>
-                    <input type="number" min="0" max="100" id="audio-playback-volume" class="form-control">
                 </div>
 
                 <div class="form-group options-advanced">
@@ -253,6 +234,29 @@
                 <div class="form-group options-advanced">
                     <label for="custom-popup-css">Custom popup CSS</label>
                     <div><textarea autocomplete="off" spellcheck="false" wrap="soft" id="custom-popup-css" class="form-control"></textarea></div>
+                </div>
+            </div>
+
+            <div>
+                <h3>Audio Options</h3>
+
+                <div class="checkbox">
+                    <label><input type="checkbox" id="auto-play-audio"> Play audio automatically</label>
+                </div>
+
+                <div class="form-group">
+                    <label for="audio-playback-volume">Audio playback volume <span class="label-light">(percent)</span></label>
+                    <input type="number" min="0" max="100" id="audio-playback-volume" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label for="audio-playback-source">Audio playback source</label>
+                    <select class="form-control" id="audio-playback-source">
+                        <option value="disabled">Disabled</option>
+                        <option value="jpod101">JapanesePod101</option>
+                        <option value="jpod101-alternate">JapanesePod101 (alternate)</option>
+                        <option value="jisho">Jisho.org</option>
+                    </select>
                 </div>
             </div>
 
