Update audio options format

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -241,6 +241,10 @@
                 <h3>Audio Options</h3>
 
                 <div class="checkbox">
+                    <label><input type="checkbox" id="audio-playback-enabled"> Enable audio playback in search results</label>
+                </div>
+
+                <div class="checkbox">
                     <label><input type="checkbox" id="auto-play-audio"> Play audio automatically</label>
                 </div>
 
