Implement audio fallbacks

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -36,7 +36,6 @@
 
         <script src="/mixed/js/extension.js"></script>
 
-        <script src="/bg/js/audio.js"></script>
         <script src="/bg/js/dictionary.js"></script>
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/templates.js"></script>
@@ -44,6 +43,7 @@
         <script src="/fg/js/document.js"></script>
         <script src="/fg/js/source.js"></script>
         <script src="/fg/js/util.js"></script>
+        <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/japanese.js"></script>
         <script src="/mixed/js/scroll.js"></script>
