--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -39,6 +39,7 @@
         <script src="/fg/js/util.js"></script>
         <script src="/fg/js/document.js"></script>
         <script src="/fg/js/source.js"></script>
+        <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/scroll.js"></script>
 
