Add input setting for custom audio source

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -253,6 +253,11 @@
                     <input type="number" min="0" max="100" id="audio-playback-volume" class="form-control">
                 </div>
 
+                <div class="form-group options-advanced">
+                    <label for="audio-custom-source">Custom audio source <span class="label-light">(URL)</span></label>
+                    <input type="text" id="audio-custom-source" class="form-control" placeholder="Example: http://localhost/audio.mp3?expression={expression}&reading={reading}">
+                </div>
+
                 <div class="form-group">
                     <label for="audio-playback-source">Audio playback source</label>
                     <select class="form-control" id="audio-playback-source">
