Improve display of storage stats

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -410,8 +410,11 @@
                 </div>
 
                 <div id="storage-use" class="storage-hidden">
-                    <p class="help-block">
+                    <p class="help-block storage-hidden" id="storage-use-finite">
                         Yomichan is using approximately <strong id="storage-usage"></strong> of <strong id="storage-quota"></strong>.
+                    </p>
+                    <p class="help-block storage-hidden" id="storage-use-infinite">
+                        Yomichan is permitted <strong>unlimited storage</strong>.
                     </p>
                 </div>
 
