Add option for popup theme

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -231,6 +231,14 @@
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <label for="popup-theme">Theme</label>
+                    <select class="form-control" id="popup-theme">
+                        <option value="default">Light</option>
+                        <option value="dark">Dark</option>
+                    </select>
+                </div>
+
                 <div class="form-group options-advanced">
                     <label for="custom-popup-css">Custom popup CSS</label>
                     <div><textarea autocomplete="off" spellcheck="false" wrap="soft" id="custom-popup-css" class="form-control"></textarea></div>
