--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title></title>
         <link rel="stylesheet" href="/mixed/css/display.css">
+        <link rel="stylesheet alternate" type="text/css" href="/mixed/css/display-default.css" data-yomichan-theme-name="default">
+        <link rel="stylesheet alternate" type="text/css" href="/mixed/css/display-dark.css" data-yomichan-theme-name="dark">
     </head>
     <body>
         <div id="spinner">
