Add separate theme option for outer popup style

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -232,11 +232,23 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="popup-theme">Theme</label>
-                    <select class="form-control" id="popup-theme">
-                        <option value="default">Light</option>
-                        <option value="dark">Dark</option>
-                    </select>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <label for="popup-theme">Popup theme</label>
+                            <select class="form-control" id="popup-theme">
+                                <option value="default">Light</option>
+                                <option value="dark">Dark</option>
+                            </select>
+                        </div>
+                        <div class="col-xs-6">
+                            <label for="popup-outer-theme">Popup shadow theme</label>
+                            <select class="form-control" id="popup-outer-theme">
+                                <option value="auto">Auto-detect</option>
+                                <option value="default">Light</option>
+                                <option value="dark">Dark</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="form-group options-advanced">
