Change #yomichan-float to .yomichan-float
Since there can be more than one popup, using a class makes more sense than an ID.

--- a/ext/bg/settings-popup-preview.html
+++ b/ext/bg/settings-popup-preview.html
@@ -24,7 +24,7 @@
                 font-family: "Helvetica Neue", Helvetica, Arial ,sans-serif;
                 font-size: 14px;
             }
-            iframe#yomichan-float {
+            iframe.yomichan-float {
                 resize: none;
             }
             .vertical-align-outer {
