--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="yomichan-float">
+<html lang="en" data-yomichan-page="float">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1" />
