--- a/ext/bg/settings-popup-preview.html
+++ b/ext/bg/settings-popup-preview.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title>Yomichan Popup Preview</title>
-        <link rel="stylesheet" type="text/css" href="/fg/css/client.css">
+        <link rel="stylesheet" type="text/css" href="/fg/css/client.css" id="client-css">
         <style>
             html {
                 transition: background-color 0.25s linear 0s, color 0.25s linear 0s;
