Add warning message for Mac users about App Nap

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -505,6 +505,14 @@
                     <a href="https://foosoft.net/projects/anki-connect/" target="_blank" rel="noopener">AnkiConnect</a> plugin.
                 </p>
 
+                <div data-show-for-operating-system="win">
+                    <div class="alert alert-warning" id="anki-mac-warning">
+                        Notice for Mac OS X users:
+                        If Yomichan has issues connecting to AnkiConnect, you may have to tweak some system settings.
+                        See <a href="https://foosoft.net/projects/anki-connect/#notes-for-mac-os-x-users" target="_blank" rel="noopener">this link</a> for more details.
+                    </div>
+                </div>
+
                 <div class="alert alert-danger" id="anki-error"></div>
 
                 <div class="checkbox">
