--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -14,6 +14,7 @@
 
             .btn-group {
                 display: flex;
+                justify-content: center;
                 margin-top: 10px;
                 white-space: nowrap;
             }
