Add unlimited storage permission

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -499,7 +499,11 @@
                 </div></div>
 
                 <div data-show-for-browser="chrome"><div class="alert alert-warning storage-persist-fail-warning storage-hidden">
-                    <p>It may not be possible to enable Persistent Storage on Chrome-based browsers.</p>
+                    <p>
+                        It may not be possible to enable Persistent Storage on Chrome-based browsers.
+                        However, the Yomichan extension has permission for unlimited storage which should
+                        prevent Chrome from deleting data.<sup><a href="https://bugs.chromium.org/p/chromium/issues/detail?id=680392#c15" target="_blank" rel="noopener">[1]</a></sup>
+                    </p>
                 </div></div>
             </div>
 
