--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -19,7 +19,14 @@
                 <p style="margin-bottom: 0;">Search your installed dictionaries by entering a Japanese expression into the field below.</p>
             </div>
 
-            <form class="input-group" style="padding-top: 10px;">
+            <div class="input-group" style="padding-top: 10px; font-size: 20px;">
+                <span title="Enable clipboard monitor" class="input-group-text">
+                    <label for="clipboard-monitor"><span class="glyphicon glyphicon-paste"></span></label>
+                    <input type="checkbox" id="clipboard-monitor" />
+                </span>
+            </div>
+
+            <form class="input-group">
                 <input type="text" class="form-control" placeholder="Search for..." id="query" autofocus>
                 <span class="input-group-btn">
                     <input type="submit" class="btn btn-default form-control" id="search" value="Search">
