--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width,initial-scale=1" />
     </head>
     <body>
+        <div id="clipboard-paste-target" contenteditable="true"></div>
+
         <script src="/mixed/lib/dexie.min.js"></script>
         <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/mixed/lib/jszip.min.js"></script>
