make search page checkbox options persist

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -22,7 +22,7 @@
             <div class="input-group" style="padding-top: 10px; font-size: 20px;">
                 <span title="Enable kana input method" class="input-group-text">
                     <label for="wanakana-enable">あ</label>
-                    <input type="checkbox" id="wanakana-enable" checked />
+                    <input type="checkbox" id="wanakana-enable" />
                 </span>
                 <span title="Enable clipboard monitor" class="input-group-text">
                     <label for="clipboard-monitor-enable"><span class="glyphicon glyphicon-paste"></span></label>
