improve search page checkbox usability
Disable text selection and make the entire area clickable, including
whitespace

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -19,14 +19,18 @@
                 <p style="margin-bottom: 0;">Search your installed dictionaries by entering a Japanese expression into the field below.</p>
             </div>
 
-            <div class="input-group" style="padding-top: 10px; font-size: 20px;">
+            <div class="input-group" style="padding-top: 10px; font-size: 20px; user-select: none;">
                 <span title="Enable kana input method" class="input-group-text">
-                    <label for="wanakana-enable">あ</label>
-                    <input type="checkbox" id="wanakana-enable" />
+                    <label>
+                        あ
+                        <input type="checkbox" id="wanakana-enable" />
+                    </label>
                 </span>
                 <span title="Enable clipboard monitor" class="input-group-text">
-                    <label for="clipboard-monitor-enable"><span class="glyphicon glyphicon-paste"></span></label>
-                    <input type="checkbox" id="clipboard-monitor-enable" />
+                    <label>
+                        <span class="glyphicon glyphicon-paste"></span>
+                        <input type="checkbox" id="clipboard-monitor-enable" />
+                    </label>
                 </span>
             </div>
 
