--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -673,7 +673,7 @@
                 </p>
             </div>
 
-            <pre id="debug"></pre>
+            <pre id="debug" class="debug"></pre>
 
             <div class="pull-right bottom-links">
                 <small><span id="extension-info"></span> &bull; <a href="search.html">Search</a> &bull; <a href="https://foosoft.net/projects/yomichan/" target="_blank" rel="noopener">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
