--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -47,6 +47,8 @@
                 <img src="/mixed/img/spinner.gif">
             </div>
 
+            <div id="query-parser" class="scan-disable"></div>
+
             <div id="content"></div>
         </div>
 
@@ -67,6 +69,7 @@
         <script src="/mixed/js/japanese.js"></script>
         <script src="/mixed/js/scroll.js"></script>
 
+        <script src="/bg/js/search-query-parser.js"></script>
         <script src="/bg/js/search.js"></script>
         <script src="/bg/js/search-frontend.js"></script>
     </body>
