--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title></title>
+        <link rel="icon" type="image/png" href="/mixed/img/icon16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="/mixed/img/icon19.png" sizes="19x19">
+        <link rel="icon" type="image/png" href="/mixed/img/icon38.png" sizes="38x38">
+        <link rel="icon" type="image/png" href="/mixed/img/icon48.png" sizes="48x48">
+        <link rel="icon" type="image/png" href="/mixed/img/icon64.png" sizes="64x64">
+        <link rel="icon" type="image/png" href="/mixed/img/icon128.png" sizes="128x128">
         <link rel="stylesheet" href="/mixed/css/display.css">
         <link rel="stylesheet" type="text/css" href="/mixed/css/display-default.css" data-yomichan-theme-name="default">
         <link rel="stylesheet alternate" type="text/css" href="/mixed/css/display-dark.css" data-yomichan-theme-name="dark">
