Update how nodes are hidden

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -426,9 +426,9 @@
                     <select class="form-control" id="dict-main"></select>
                 </div>
 
-                <div class="text-danger" id="dict-purge">Dictionary data is being purged, please be patient...</div>
-                <div class="alert alert-warning" id="dict-warning">No dictionaries have been installed</div>
-                <div class="alert alert-danger" id="dict-error"></div>
+                <div class="text-danger" id="dict-purge" hidden>Dictionary data is being purged, please be patient...</div>
+                <div class="alert alert-warning" id="dict-warning" hidden>No dictionaries have been installed</div>
+                <div class="alert alert-danger" id="dict-error" hidden></div>
 
                 <div id="dict-groups"></div>
                 <div id="dict-groups-extra"></div>
