Add outdated warning

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -492,7 +492,7 @@
 
                 <template id="dict-template"><div class="dict-group well well-sm">
                     <h4><span class="text-muted glyphicon glyphicon-book"></span> <span class="dict-title"></span> <small class="dict-revision"></small></h4>
-                    <p class="text-warning" hidden>This dictionary is outdated and may not support new extension features; please import the latest version.</p>
+                    <p class="text-warning dict-outdated" hidden>This dictionary is outdated and may not support new extension features; please import the latest version.</p>
 
                     <div class="checkbox">
                         <label><input type="checkbox" class="dict-enabled"> Enable search</label>
