--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -401,7 +401,7 @@
                 </div>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="enable-scanning-of-popup-expressions"> Enable scanning of popup expressions</label>
+                    <label><input type="checkbox" id="enable-scanning-of-popup-expressions"> Enable scanning of expressions in search results</label>
                 </div>
 
                 <div class="form-group">
