use scan toggling for stroke order diagram too

--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -26,7 +26,7 @@ No data found
         <img src="/mixed/img/entry-current.svg" class="current" title="Current entry (Alt + Up/Down/Home/End/PgUp/PgDn)" alt>
     </div>
 
-    <div class="glyph">{{character}}</div>
+    <div class="glyph expression-scan-toggle">{{character}}</div>
 
     {{#if frequencies}}
     <div>
