always disable scanning IME checkbox label

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -27,7 +27,7 @@
 
             <div class="input-group" style="padding-top: 10px; font-size: 20px; user-select: none;">
                 <span title="Enable kana input method" class="input-group-text">
-                    <label>
+                    <label class="scan-disable">
                         あ
                         <input type="checkbox" id="wanakana-enable" />
                     </label>
